<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App Control</string>
    <string name="title_activity_home">App Control</string>
    <string name="about_app">About App</string>
    <string name="success">Success</string>
    <string name="enabling_success">Enabling an application package has been successful!</string>
    <string name="fail">Fail</string>
    <string name="enabling_failed">Enabling an application package has failed</string>
    <string name="apps_enables">app(s) enabled</string>
    <string name="default_pkg_name">com.android.mms</string>
    <string name="err_pkg_not_installed"> is not installed!!\nPlease input package name \ninstalled on this device</string>
    <string name="err_no_enabled_app">There is no enabled app</string>
    <string name="err_no_disabled_app">There is no disabled app</string>
    <string name="err_enabledapplist_is_null">successfullyEnabledAppList is null</string>
    <string name="android_browser">Android Browser </string>
    <string name="android_market">Android Market </string>
    <string name="voice_dialer">Voice Dialer </string>
    <string name="youtube">YouTube</string>
    <string name="pkg_name"> Package Name:</string>
    <string name="show_enabled_app_list">Show enabled app list</string>
    <string name="show_disabled_app_list">Show disabled app list</string>
    <string name="show_all_disabled_apps">Enable all disabled-apps</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="enabled">\  has been enabled</string>
    <string name="disabled">\  has been disabled</string>

    
    <!-- Admin and License activation constants -->
    <string name="device_admin_heading">Device Administration</string>
    <string name="enable_admin">Enable Admin</string>
    <string name="disable_admin">Disable Admin</string>
    <string name="device_admin_enabled">Device admin enabled</string>
    <string name="device_admin_disabled">Device admin disabled</string>
    <string name="license_activation">License Activation</string>
    <string name="activate_elm">Activate ELM</string>
    <string name="disable_admin_confirmation">Do you want to disable device administrator?</string>
    <string name="elm_activated_succesfully">ELM activated successfully</string>
    <string name="insert_elm_key">Please insert ELM key in the code in variable SAConstants.ELM_KEY</string>
    <string name="insert_elm_key_heading">Insert ELM key</string>

    <!-- License Error Code -->
    <string name="err_internal">Internal error</string>
    <string name="err_internal_server">Internal server error</string>
    <string name="err_licence_invalid_license">Invalid license</string>
    <string name="err_invalid_package_name">Invalid package name</string>
    <string name="err_licence_terminated">License terminated</string>
    <string name="err_network_disconnected">Network disconnected</string>
    <string name="err_network_general">Network general error</string>
    <string name="err_unknown">Error unknown</string>
    <string name="err_not_current_date">Not current date</string>
    <string name="err_null_params">NULL params</string>
    <string name="err_user_disagrees_license_agreement">User disagrees EULA</string>

    <string name="not_supported_sdk">This device does not support ELM activation API and hence this app will not work on it</string>
    <string name="ok">OK</string>
    <string name="app_name_display">App Control</string>
    <string name="app_version">Ver 2.1</string>
    <string name="SDK_version">Minimum SDK required: KNOX Standard SDK ver 2.0</string>
    <string name="app_desc">This app enables or disables certain apps.</string>

    <!-- Exception Messages -->
    <string name="admin_activity_not_found">"ActivityNotFoundException: Device admin addition activity is not found"</string>
    <string name="non_owner_admin_removal_exception">"SecurityException: This app attempts to remove an active admin not owned by it"</string>
    <string name="security_exception">SecurityException: </string>

</resources>